--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "webpack": "^2.2.1"
   },
   "dependencies": {
+    "artillery": "^1.6.0-24",
     "axios": "^0.18.0",
     "babel-preset-env": "^1.7.0",
     "body-parser": "^1.17.2",
